java 11 lang level compatibility + new json features